crates/carta/tests/snapshots/golden_writer__latex__table__table-colspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
\multicolumn{2}{@{}l@{}}{%
wide} \\
a & b \\
\end{longtable}
}
