crates/carta/tests/snapshots/golden_writer__latex__table__table-foot.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endhead
\midrule\noalign{}
sum & 3 \\
\bottomrule\noalign{}
\endlastfoot
a & b \\
\end{longtable}
}
