crates/carta/tests/snapshots/golden_writer__latex__table__table-headerless-plain.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & b \\
c & d \\
\end{longtable}
}
