crates/carta/tests/snapshots/golden_writer__latex__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{quote}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
a & b \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
1 & 2 \\
\end{longtable}
}
\end{quote}
