crates/carta/tests/snapshots/golden_writer__latex__table__table-long-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
k & description \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & this cell holds a deliberately long run of text that cannot fit
inside one seventy-two column line and therefore forces a layout
decision \\
\end{longtable}
}
