crates/carta/tests/snapshots/golden_writer__latex__table__table-multiple-bodies.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a1 & a2 \\
b1 & b2 \\
\end{longtable}
}
