crates/carta/tests/snapshots/golden_writer__latex__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
\multirow{2}{*}{tall} & a \\
& b \\
\end{longtable}
}
