crates/carta/tests/snapshots/golden_writer__latex__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{longtable}[]{@{}l@{}}
\caption[Short form]{The full caption text}\tabularnewline
\toprule\noalign{}
h \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
h \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
v \\
\end{longtable}
